[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ble-scale"
version = "0.1.0"
description = "Read weight from BLE scales that broadcast via advertisements"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.22.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ble-scale = "ble_scale.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
